Allow pulsar metadata headers to be mapped outbound
This allows pulsar metadata headers, which are excluded on the
outbound messages by default, to be included in the outbound
message headers.

Resolves #1037